Correcciones norma ICONTEC

--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -1,7 +1,7 @@
 
 \cleardoublepage
 %\renewcommand{\bibname}{Bibliografía}
-\addcontentsline{toc}{chapter}{\textsc{Bibliografía}}%para  que aparezca en la tabla de cotenidos
+\addcontentsline{toc}{chapter}{\textsc{BIBLIOGRAFÍA}}%para  que aparezca en la tabla de cotenidos
 %\bibliographystyle{unsrt}
 %\bibliographystyle{plain}
 \bibliographystyle{apalike}
