--- a/COMPLETO.tex
+++ b/COMPLETO.tex
@@ -1,7 +1,5 @@
 \documentclass[a4paper,oneside,12pt]{book}
 \include{Paquetes}%Donde está el preambulo del documento
-
-
 %Información general del proyecto
 \autoruno{Juan Carlos Sánchez Villafrades}
 \correouno{juan.sanchez7@correo.uis.edu.co}
@@ -9,10 +7,10 @@
 
 \titulo{\textbf{DISEÑO E IMPLEMENTACIÓN DE UN SISTEMA DE CARACTERIZACIÓN PARA LOS FOTOMULTIPLICADORES DE SILICIO (SIPM) DEL TELESCOPIO DE MUONES (MUTE)}}
 \director{Jesús Peña Rodríguez }
-%\cargodirector{PhD (c) en Física}
+\cargodirector{PhD. (c) en Física}
 \correodirector{jesus.pena@correo.uis.edu.co}
-\codirector{Luis Alberto Núñes De Villavicencio Martínez}
-%\cargocodirector{PhD en Física}
+\codirector{Luis Alberto Núñez De Villavicencio Martínez}
+\cargocodirector{PhD. en Ciencias}
 \correocodirector{lnunez@uis.edu.co}
 
 
@@ -48,9 +46,6 @@
 
 %%%%%%%%%%%%%%%%%	RESUMEN EN INGLÉS	%%%%%%%%%%%%%%%%%%%%%%%%
 \include{ResuIn}
-%%%%%%%%%%%%%%%%%%%	PREFACIO	%%%%%%%%%%%%%%%%%%%%%
-%\doublespacing %para que comience a usar doble espaciado (normas APA)
-\include{Prefacio}
 
 %%%%%%%%%%%%%%%%%%%		INTRODUCCIÓN 	%%%%%%%%%%%%%%%%%%%%%
 %\doublespacing %para que comience a usar doble espaciado (normas APA)
@@ -59,6 +54,9 @@
 %%%%%%%%%%%%%%%%%%%		OBJETIVOS 	%%%%%%%%%%%%%%%%%%%%%
 %\doublespacing %para que comience a usar doble espaciado (normas APA)
 \include{Objetivos}
+%%%%%%%%%%%%%%%%%%%	PREFACIO	%%%%%%%%%%%%%%%%%%%%%
+%\doublespacing %para que comience a usar doble espaciado (normas APA)
+\include{Prefacio}
 %%%%%%%%%%%%%%%%%%%		MuTe	%%%%%%%%%%%%%%%%%%%%%
 \include{MuTe}
 
