--- a/Cartas_nota.tex
+++ b/Cartas_nota.tex
@@ -1,11 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%		Calificación		%%%%%%%%%%%
 
-% \newpage
-% \begin{center}
-% \includegraphics[trim = 5mm 50mm 5mm 5mm, scale=1, clip,width=\textwidth]{Images/Nota}%trim recorta izquierda abajo derecha arriba
-% \par
-% \end{center}
+ \newpage
+ \begin{center}
+ \includegraphics[trim = 5mm 10mm 5mm 1mm, scale=0.5, clip,width=\textwidth]{Images/nota}%trim recorta izquierda abajo derecha arriba
+ \par
+ \end{center}
 
 %%%%%%%%%%%%%		Carta Autor 	%%%%%%%%%%%
 %\newpage
