--- a/Conclusiones.tex
+++ b/Conclusiones.tex
@@ -1,4 +1,4 @@
-\chapter{Conclusiones}
+\chapter{CONCLUSIONES}
 \label{Cap:Conclusiones}
 En este proyecto se diseñó e implementó un sistema de caracterización de SiPMs compuesto por tres módulos electrónicos que permiten parametrizar el voltaje de ruptura, la ganancia, la tasa de conteo oscuro, el \textit{afterpulses} y el \textit{crosstalk}.\\ \\
 El módulo de control de temperatura logró estabilizarse a una temperatura objetivo en el rango de 0 a 50 $^\circ$C en menos de 10 minutos. Asimismo, el módulo de medición de corriente DC permitió realizar mediciones  el rango de  $2.5$ nA a 500 nA y de $2.5$ nA a $1~\mu$A. Por último, la fuente de luz pulzada permitió generar pulsos periódicos de voltaje con una amplitud de entre $1.8$ V y $3.8$ V con un ancho de pulso de entre 6 ns a 11 ns a una frecuencia de entre 100 Hz y $25.6$ kHz y un registro de eventos con una frecuencia de muestreo de 125 MS/s.\\ \\
