--- a/Introduccion.tex
+++ b/Introduccion.tex
@@ -3,9 +3,9 @@
 % \ Capítulo \thechapter \ }
 % {7pt}{\Large\bfseries\filcenter}
 
-\chapter*{Introducción}
+\chapter*{INTRODUCCIÓN}
 \markright{Introducción}
-\addcontentsline{toc}{chapter}{Introducción}%para que aparezca en la tabla de contenidos
+\addcontentsline{toc}{chapter}{INTRODUCCIÓN}%para que aparezca en la tabla de contenidos
 \label{Cap:Introduccion}
 Actualmente, el Grupo de Investigación en Relatividad y Gravitación (GIRG) y el Grupo Halley de la Universidad Industrial de Santander están desarrollando el Telescopio de Muones (MuTe), el cual será instalado en el volcán  Cerro Machín (Tolima, Colombia)~\citep{Mute_oficial}. MuTe está conformado por un hodoscopio de barras centelladoras, en cuyos extremos están instalados fotomultiplicadores de silicio (SiPMs, por sus siglas en inglés) que se encargan de detectar los fotones generados durante el proceso de centelleo. Los  SiPM son actualmente una alternativa a los detectores de fotones tradicionales, como los tubos fotomultiplicadores~\citep{Intro_SIPM_Sensl}. \\ \\
 Los SiPMs están conformados por una matriz de fotodiodos de avalancha que operan en modo Geiger~\citep{Sipm_S13360_1350CS_datasheet}, son compactos ($< 10~mm^2$), tienen una rápida respuesta, alta ganancia ($\sim 10^6$) y bajo voltaje de operación($ < 80~\mbox{V}$); de ahí que han tomado tanta importancia en aplicaciones científicas e industriales \citep{Blue_SIPM}, como en el campo de imágenes médicas \citep{SiPM_PET,SiPM_3D_img}, biofotónica \citep{SiPM_bio,SiPM_bio2}, LiDAR \citep{SiPM_Lidar,SiPM_3D_img} y física de altas energías~\citep{minimute,Mute_oficial}.\\  \\%Sin embargo, su principal desventaja es la dependencia de la temperatura~\citep{Intro_SIPM_Sensl}.\\ \\
