--- a/MuTe.tex
+++ b/MuTe.tex
@@ -1,4 +1,4 @@
-\chapter{El telescopio de muones MuTe}
+\chapter{EL TELESCOPIO DE MUONES MUTE}
 \label{Cap:MuTe}
 El proyecto MuTe\footnote{https://halley.uis.edu.co/fuego} busca diseñar, construir, calibrar y poner en funcionamiento un telescopio que permita aplicar la muongrafía a volcanes en Colombia para generar perfiles de densidad y determinar la estructura interna de la zona central de los mismos. MuTe se compone de dos detectores: un detector Cherenkov de agua (WCD) y un hodoscopio de centelladores plásticos como se muestra en la fig. \ref{fig:MuTe}.\\ \\
 El WCD permite detectar la radiación Cherenkov producida por el paso de partículas cargadas con una velocidad mayor a la velocidad de la luz en el agua. Se utiliza para identificar si la partícula incidente pertenece a la componente muónica del flujo de secundarios \citep{Tesis_adriana}.
