--- a/Objetivos.tex
+++ b/Objetivos.tex
@@ -1,12 +1,11 @@
-\chapter*{Objetivos}
-\markright{Objetivos}
-\addcontentsline{toc}{chapter}{Objetivos}%para que aparezca en la tabla de contenidos
+\chapter{OBJETIVOS}
+%\addcontentsline{toc}{chapter}{Objetivos}%para que aparezca en la tabla de contenidos
 \label{Cap:Objetivos}
-\noindent \textbf{Objetivo general}\\
+\section{OBJETIVO GENERAL}
 Diseñar e implementar un sistema de caracterización para los fotomultiplicadores de silicio del
 telescopio de muones.\\ \\
 
-\noindent \textbf{Objetivos específicos}\\
+\section{OBJETIVOS ESPECÍFICOS}
 \begin{itemize}
     \item Desarrollar los módulos para las diferentes etapas de caracterización de los SiPM.
     \item Caracterizar el voltaje de ruptura de los SiPM en función de la temperatura.
