--- a/Portada.tex
+++ b/Portada.tex
@@ -52,9 +52,9 @@
 \textbf{\large ~}
 \par\end{center}{\large \par}
 
-\begin{center}%		Logos, escudos, etc
-  \includegraphics[width=0.5\textwidth]{Images/UIS_e3t_GIRG}\\
-\end{center}
+% \begin{center}%		Logos, escudos, etc
+%   \includegraphics[width=0.5\textwidth]{Images/UIS_e3t_GIRG}\\
+% \end{center}
 
 %Inserta un espacio
 \noindent \begin{center}
