--- a/Prefacio.tex
+++ b/Prefacio.tex
@@ -3,19 +3,20 @@
 % \ Capítulo \thechapter \ }
 % {7pt}{\Large\bfseries\filcenter}
 
-\chapter*{Prefacio}
+\chapter{PREFACIO}
 \markright{Prefacio}
-\addcontentsline{toc}{chapter}{Prefacio}%para que aparezca en la tabla de contenidos
+%\addcontentsline{toc}{chapter}{PREFACIO}%para que aparezca en la tabla de contenidos
 \label{Cap:Prefacio}
-Como parte del proceso de divulgación del presente proyecto de grado se realizaron diferentes aportes académicos,  uno de estos fue la participación en la siguiente publicación:
+Como parte del proceso de divulgación del presente proyecto de grado se realizaron diferentes aportes académicos, como la participación en la siguientes publicaciones:
 \begin{itemize}
 	\item \textbf{MiniMuTe: A muon telescope prototype for studying volcanic structures with cosmic ray flux.} H. Asorey, R. Calderón-Ardila, K. Forero-Gutiérrez, L.A. Nuñez, J. Peña-Rodríguez, J. Salamanca-Coy, D. Sanabria-Gómez, J. Sánchez-Villafrades and D. Sierra-Porta. Scientia  et Technica  Año 2018, Vol. 23, No. 03, septiembre  de 2018. Universidad  Tecnológica  de Pereira. ISSN 0122-1701.
+	\item \textbf{Simulated Response of MuTe, a Hybrid Muon Telescope}A. Vásquez-Ramírez, M. Suárez-Durán, A. Jaimes-Motta, R. Calderón-Ardila, J.Peña-Rodríguez, J. Sánchez-Villafrades, J.D. Sanabria-Gómez, H. Asorey, and L.A.Núñez. Journal of Instrumentation (JINST), enero de 2020. (En preparación) arXiv:1912.10081.
 \end{itemize} 
 Adicionalmente, parte de los avances y resultados del presente trabajo fueron expuestos en dos eventos nacionales y uno internacional, en (1) como autor y en (2, 3) como coautor.
 \begin{enumerate}
 	\item \textbf{Control de temperatura para el estudio del voltaje de ruptura de SiPMs}. II Congreso Internacional de Ciencias Básicas e Ingeniería (CICI). Villavicencio, Colombia, Agosto de 2018.
-	\item \textbf{MuTe: Un telescopio de muones para estudiar la estructura interna de volcanes mediante el flujo de rayos cósmicos.} V Congreso Colombiano de Astrofísica y Astronomía (COCOA). Pereira, Colombia, Octubre de 2017.
-	\item \textbf{Study of the System response, Plastic Scintillator- Optical fiber - SIPM for the MuTe Project.} XIV School on Instrumentation in Elementary Particle Physics (ICFA). European Organization for Nuclear Research (CERN). La Habana, Cuba, Diciembre de 2017.
+	\item \textbf{MuTe: Un telescopio de muones para estudiar la estructura interna de volcanes mediante el flujo de rayos cósmicos.} V Congreso Colombiano de Astrofísica y Astronomía (COCOA). Pereira, Colombia, octubre de 2017.
+	\item \textbf{Study of the System response, Plastic Scintillator- Optical fiber - SIPM for the MuTe Project.} XIV School on Instrumentation in Elementary Particle Physics (ICFA). European Organization for Nuclear Research (CERN). La Habana, Cuba, diciembre de 2017.
 % 	\item \textbf{MuTe: A hybrid muon telescope for exploring geological structures.} 36th International Cosmic Ray Conference (ICRC). Madison, Wisconsin, USA, Julio de 2019.
 \end{enumerate}
 \markright{Prefacio}
