--- a/Recomendaciones.tex
+++ b/Recomendaciones.tex
@@ -1,4 +1,4 @@
-\chapter{Recomendaciones para trabajos futuros}
+\chapter{RECOMENDACIONES PARA TRABAJOS FUTUROS}
 \label{Cap:Recomendaciones}
 Respecto a los módulos electrónicos desarrollados, en el caso del sistema de control de temperatura se recomienda utilizar unas celdas Peltier con mayor capacidad (por ejemplo: TEC1-12730) que permitan llegar a temperaturas por debajo de 0 $^\circ$C. En el caso de la fuente de luz pulsada se sugiere cambiar la FPGA Nexys 3 Sparta-6 por un microcontrolador PIC16F88 como el utilizado en \citep{Deisgn_LED_driver} con el fin de optimizar recursos. Adicionalmente, se invita  a realizar una interfaz de usuario en algunos de los programas soportados por la Red Pitaya (Matlab\textsuperscript \textregistered $~$o LabView\textsuperscript \textregistered $~$) con el fin de centralizar y automatizar el proceso de caracterización de los SiPMs.\\ \\
 Por último, se invita a utilizar los módulos desarrollados para continuar con el estudio de SiPMs y ampliarlo al estudio de tubos fotomultiplicadores (PMT). A modo de ejemplo, se podría cambiar el LED utilizado la fuente de luz pulsada para obtener la respuesta de un SiPM o PMT a diferentes longitudes de onda (PDE). También se podría utilizar este módulo para caracterizar la longitud de atenuación en barras centelladoras.
