--- a/Tablas.tex
+++ b/Tablas.tex
@@ -1,5 +1,5 @@
+\renewcommand*\contentsname{TABLA DE CONTENIDO}
 \tableofcontents
-
 \cleardoublepage
 % \addcontentsline{toc}{chapter}{Índice de figuras} % para que aparezca en el indice de contenidos
 {%
